--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ericblade/quagga2": "^1.8.4",
+    "@hookform/resolvers": "^5.0.1",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "quagga": "^0.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-hot-toast": "^2.5.2",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
