--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ericblade/quagga2": "^1.8.4",
     "@hookform/resolvers": "^5.0.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
