--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
